# XSUI-lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: xsConstants.h  xsCore.h  xsFont.h  xsImage.h  xsMath.h  xsTypes.h  xsUtils.h  xsui.h
include/UI_elements/: Button.h  xsButton.h
src/: xsCore.c  xsFont.c  xsImage.c  xsMath.c  xsUtils.c  xsui.c
src/UI_elements/: Button.c  xsButton.c
test/: CMakeLists.txt
test/buttons/: buttons.c
